--- a/3-Tier-Aws-App/app/backend/package.json
+++ b/3-Tier-Aws-App/app/backend/package.json
@@ -2,11 +2,13 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.16.3"
   }
 }
