dockerize and add nginx bug fixes

--- a/3-Tier-Aws-App/app/docker/Dockerfile.backend
+++ b/3-Tier-Aws-App/app/docker/Dockerfile.backend
@@ -1,9 +1,10 @@
 # Build Node.js Backend
-FROM node:18-alpine
+FROM node:20-alpine
 WORKDIR /app
 COPY backend/package*.json ./
 RUN npm install
 COPY backend ./backend
+COPY db ./db
 WORKDIR /app/backend
 EXPOSE 5000
 CMD ["node", "index.js"]
