--- a/3-Tier-Aws-App/app/docker/Dockerfile.frontend
+++ b/3-Tier-Aws-App/app/docker/Dockerfile.frontend
@@ -1,14 +1,36 @@
-# Build React Frontend
-FROM node:18-alpine as build
+# Stage 1: Build the Vite React application
+FROM node:20-alpine as builder
+
+# Set the working directory
 WORKDIR /app
+
+# Copy package.json and package-lock.json to leverage Docker cache
+# This layer is only rebuilt if dependencies change
 COPY frontend/package*.json ./
+
+# Install dependencies using 'npm ci' for reliable builds
 RUN npm install
-COPY frontend ./frontend
-WORKDIR /app/frontend
+
+# Copy all source files
+COPY frontend/ ./
+
+# Build the project for production
 RUN npm run build
 
+# Stage 2: Serve with Nginx for production
 FROM nginx:alpine
-COPY --from=build /app/frontend/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
 
+# Copy the custom Nginx configuration to handle client-side routing
+COPY docker/nginx.conf /etc/nginx/conf.d/default.conf
+
+# Set the working directory to Nginx's HTML root
+WORKDIR /usr/share/nginx/html
+
+# Clean up default Nginx content and copy build artifacts
+COPY --from=builder /app/dist .
+
+# Expose port 80 for web traffic
+EXPOSE 80
+
+# Start Nginx
+CMD ["nginx", "-g", "daemon off;"]
