--- a/3-Tier-Aws-App/app/docker/docker-compose.yml
+++ b/3-Tier-Aws-App/app/docker/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - DATABASE_URL=postgres://postgres:postgres@db:5432/appdb
     depends_on:
       - db
+    networks:
+      - app-network
 
   frontend:
     build:
@@ -21,7 +23,21 @@ services:
     depends_on:
       - backend
     restart: always
-
+    networks:
+      - app-network
+  nginx:
+    image: nginx:latest
+    container_name: nginx_proxy
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - frontend
+      - backend
+    restart: always
+    networks:
+      - app-network
   db:
     image: postgres:17
     container_name: postgres_db
@@ -37,5 +53,10 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    networks:
+      - app-network  
 volumes:
   postgres_data:
+networks:
+  app-network:
+    driver: bridge  
