--- a/3-Tier-Aws-App/app/backend/package.json
+++ b/3-Tier-Aws-App/app/backend/package.json
@@ -4,11 +4,14 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.18.2",
+    "nodemon": "^3.1.10",
     "pg": "^8.16.3"
   }
 }
